--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
-                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto:programmer_frontend@mackey.com.ua">programmer_frontend@mackey.com.ua</a></li>
+                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto:denis_lobzenko@mackey.com.ua">denis_lobzenko@mackey.com.ua</a></li>
                     <li class="phone"><i class="fa fa-phone"></i><a href="tel:+380993843491">+3 8 099-384-34-91</a></li>
                     <li class="website"><i class="fa fa-globe"></i><a href="#" target="_blank">studio.clu.pp.ua</a></li>
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/%D0%B4%D0%B5%D0%BD%D0%B8%D1%81-%D0%BB%D0%BE%D0%B1%D0%B7%D0%B5%D0%BD%D0%BA%D0%BE-183b707b/" target="_blank">linkedin</a></li>
